[package]
name = "metube"
version = "0.1.0"
edition = "2021"

[dependencies]
log = ">=0.4"
env_logger = ">=0.10"
warp = ">=0.3"
tokio = { version = ">=1", features = ["rt-multi-thread"] }
tera = { version = ">=1", default-features = false }
serde = { version = ">=1", features = ["derive"] }
urlencoding = ">=2"
clap = ">=4"
toml = ">=0.5"
time = { version = ">=0.3", features = ["formatting"] }
r2d2 = ">=0.8"
rusqlite = ">=0.29"
futures-util = ">=0.3"
bytes = ">=1"
rand = ">=0.8"
sha2 = ">=0.10"
regex = ">=1.8"
base64 = ">=0.21"
